<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/etNome"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/nome"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDataNascimento"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/data_nascimento"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNome" />

    <EditText
        android:id="@+id/etBairro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/bairro"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDataNascimento" />

    <EditText
        android:id="@+id/etAcademiaOut"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/academia"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etBairro" />

    <EditText
        android:id="@+id/etRecordeOut"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/recorde"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAcademiaOut" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRecordeOut" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCadastrar" />

</androidx.constraintlayout.widget.ConstraintLayout>
